[tool.poetry]
name = "twitter_data"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
tweepy = "^3.8.0"
ipython = "^7.12.0"
jupyterlab = "^1.2.6"
plotnine = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
