[tool.poetry]
name = "twitter_data"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
tweepy = "^3.8.0"
ipython = "^7.12.0"
jupyterlab = "^1.2.6"
plotnine = "^0.6.0"
nltk = "^3.4.5"
emoji = "^0.5.4"
rpy2 = "^3.2.6"
networkx = "^2.4"
python-louvain = "^0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
